--- a/src/WorkOnlineDropbox/project.json
+++ b/src/WorkOnlineDropbox/project.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "dependencies": {
     "Microsoft.ApplicationInsights.AspNetCore": "1.0.0",
     "Microsoft.AspNetCore.Diagnostics": "1.0.0",
@@ -17,7 +17,8 @@
     "Microsoft.Extensions.Logging.Debug": "1.0.0",
     "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0",
     "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0",
-    "Dropbox.Api": "3.5.0"
+    "Dropbox.Api": "3.5.0",
+    "Microsoft.AspNetCore.Authorization": "1.0.0"
   },
 
   "tools": {
